# pico-sdk

src/cmake/: rp2_common.cmake
src/common/pico_sync/include/pico/: critical_section.h
src/rp2_common/boot_bootrom_headers/include/boot/: bootrom_constants.h
src/rp2_common/hardware_flash/include/hardware/: flash.h
src/rp2_common/hardware_gpio/: gpio.c
src/rp2_common/hardware_gpio/include/hardware/: gpio.h
src/rp2_common/pico_bootrom/: CMakeLists.txt  bootrom.c
src/rp2_common/pico_bootrom/include/pico/: bootrom.h
src/rp2_common/pico_crt0/: embedded_start_block.inc.S
src/rp2_common/pico_crt0/rp2040/: sections_copy_to_ram.ld  sections_default.ld  sections_no_flash.ld
src/rp2_common/pico_crt0/rp2040/platform/: section_copy_to_ram_data.ld  section_copy_to_ram_text.ld  section_default_data.ld  section_default_text.ld  section_no_flash_data.ld  section_no_flash_text.ld  section_platform_end.ld
src/rp2_common/pico_crt0/rp2350/: memmap_copy_to_ram.ld  memmap_default.ld  memmap_no_flash.ld  sections_copy_to_ram.ld  sections_default.ld  sections_no_flash.ld
src/rp2_common/pico_crt0/rp2350/platform/: section_copy_to_ram_data.ld  section_copy_to_ram_text.ld  section_default_text.ld  section_no_flash_text.ld  section_platform_end.ld
src/rp2_common/pico_cyw43_driver/: cyw43_driver.c
src/rp2_common/pico_rand/: rand.c
src/rp2_common/pico_runtime_init/include/pico/: runtime_init.h
src/rp2_common/pico_secure/: BUILD.bazel  CMakeLists.txt  secure.c
src/rp2_common/pico_secure/include/pico/: secure.h
src/rp2_common/pico_standard_link/: CMakeLists.txt
src/rp2_common/pico_standard_link/scripts/rp2_common/: memmap_copy_to_ram.ld  memmap_default.ld  memmap_no_flash.ld  memory_aliases_default.ld  section_end.ld  (+9 more)
test/kitchen_sink/: memmap_custom.ld
